fix: blockquote dark mode color

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -74,6 +74,10 @@ button:disabled {
         background: #171717 !important;
       }
 
+      blockquote p {
+        color: #f4f4f5 !important;
+      }
+
       pre,
       code {
         background-color: #0f172a;
